--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   </div>
                 </div>
                 <div className="relative">
-                  <img src="/assets/hero-image.jpg" alt="Game development concept" className="rounded-2xl shadow-2xl object-cover w-full h-auto max-h-[500px]" />
+                  <img src="/assets/1000002015.jpg" alt="Game development concept" className="rounded-2xl shadow-2xl object-cover w-full h-auto max-h-[500px]" />
                   <div className="absolute -bottom-4 -right-4 w-24 h-24 bg-purple-600 rounded-full blur-xl opacity-70"></div>
                 </div>
               </div>
