--- a/index.html
+++ b/index.html
@@ -113,58 +113,73 @@
             </section>
           )}
 
-          {/* Portfolio Section */}
-          {activeTab === 'portfolio' && (
-            <section className="py-20 px-6 bg-gray-800/30">
-              <div className="max-w-6xl mx-auto">
-                <div className="text-center mb-16">
-                  <h2 className="text-3xl md:text-4xl font-bold mb-4">{t.portfolioTitle}</h2>
-                  <p className="text-gray-400 max-w-2xl mx-auto">
-                    {t.portfolioDesc}
-                  </p>
-                </div>
-                <div className="grid md:grid-cols-2 gap-8">
-                  {[
-                    {
-                      title: "Quantum Circuit Simulator",
-                      description: "A physics-based puzzle game that teaches quantum computing principles through gameplay mechanics.",
-                      image: "https://picsum.photos/id/1011/800/600" 
-                    },
-                    {
-                      title: "Neon Arcade Cabinet",
-                      description: "Custom-built retro arcade cabinet with embedded Raspberry Pi system and LED light show integration.",
-                      image: "https://picsum.photos/id/1012/800/600" 
-                    },
-                    {
-                      title: "AI Dungeon Master",
-                      description: "Machine learning-powered RPG engine that creates dynamic narratives based on player behavior.",
-                      image: "https://picsum.photos/id/1015/800/600" 
-                    },
-                    {
-                      title: "Smart Home Controller",
-                      description: "IoT device with touch screen interface for managing home automation systems using ESP32 microcontroller.",
-                      image: "https://picsum.photos/id/1016/800/600" 
-                    }
-                  ].map((project, index) => (
-                    <div key={index} className="bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-blue-500 transition-all group">
-                      <img src={project.image} alt={project.title} className="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-500" />
-                      <div className="p-6">
-                        <h3 className="text-xl font-bold mb-2">{project.title}</h3>
-                        <p className="text-gray-400 mb-4">{project.description}</p>
-                        <button className="text-blue-400 hover:text-blue-300 font-medium flex items-center gap-2 group/button">
-                          View Details
-                          <svg className="transform translate-x-0 group-hover/button:translate-x-1 transition-transform" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M5 12H19" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"/>
-                            <path d="M12 5L19 12L12 19" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"/>
-                          </svg>
-                        </button>
-                      </div>
-                    </div>
-                  ))}
-                </div>
-              </div>
-            </section>
-          )}
+{/* Portfolio Section */}
+{activeTab === 'portfolio' && (
+  <section className="py-20 px-6 bg-gray-800/30">
+    <div className="max-w-6xl mx-auto">
+      <div className="text-center mb-16">
+        <h2 className="text-3xl md:text-4xl font-bold mb-4">{t.portfolioTitle}</h2>
+        <p className="text-gray-400 max-w-2xl mx-auto">
+          {t.portfolioDesc}
+        </p>
+      </div>
+
+      <div className="grid md:grid-cols-2 gap-8">
+        {[
+          {
+            title: "Quantum Circuit Simulator",
+            description: "A physics-based puzzle game that teaches quantum computing principles through gameplay mechanics.",
+            image: "https://picsum.photos/id/1011/800/600", 
+            link: "https://quantum-simulator.example.com" 
+          },
+          {
+            title: "Neon Arcade Cabinet",
+            description: "Custom-built retro arcade cabinet with embedded Raspberry Pi system and LED light show integration.",
+            image: "https://picsum.photos/id/1012/800/600", 
+            link: "https://github.com/martynezys/arcade-cabinet" 
+          },
+          {
+            title: "AI Dungeon Master",
+            description: "Machine learning-powered RPG engine that creates dynamic narratives based on player behavior.",
+            image: "https://picsum.photos/id/1015/800/600", 
+            link: "https://ai-dungeon-master.demo" 
+          },
+          {
+            title: "Smart Home Controller",
+            description: "IoT device with touch screen interface for managing home automation systems using ESP32 microcontroller.",
+            image: "https://picsum.photos/id/1016/800/600", 
+            link: "https://github.com/martynezys/smart-home-controller" 
+          }
+        ].map((project, index) => (
+          <a 
+            key={index} 
+            href={project.link} 
+            target="_blank" 
+            rel="noopener noreferrer"
+            className="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-blue-500 transition-all"
+          >
+            <img 
+              src={project.image} 
+              alt={project.title} 
+              className="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-500" 
+            />
+            <div className="p-6">
+              <h3 className="text-xl font-bold mb-2">{project.title}</h3>
+              <p className="text-gray-400 mb-4">{project.description}</p>
+              <span className="text-blue-400 hover:text-blue-300 font-medium flex items-center gap-2 group/button">
+                View Details
+                <svg className="transform translate-x-0 group-hover/button:translate-x-1 transition-transform" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5 12H19" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"/>
+                  <path d="M12 5L19 12L12 19" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"/>
+                </svg>
+              </span>
+            </div>
+          </a>
+        ))}
+      </div>
+    </div>
+  </section>
+)}
 
           {/* Contact Section */}
           {activeTab === 'contact' && (
