--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
       <div className="grid md:grid-cols-2 gap-8">
         {[
           {
-            title: "Quantum Circuit Simulator",
+            title: "Projekt VTT",
             description: "A physics-based puzzle game that teaches quantum computing principles through gameplay mechanics.",
             image: "https://picsum.photos/id/1011/800/600", 
-            link: "https://quantum-simulator.example.com" 
+            link: "https://vimeo.com/1094175370/945b8af061" 
           },
           {
-            title: "Neon Arcade Cabinet",
-            description: "Custom-built retro arcade cabinet with embedded Raspberry Pi system and LED light show integration.",
-            image: "https://picsum.photos/id/1012/800/600", 
-            link: "https://github.com/martynezys/arcade-cabinet" 
+            title: "Other UE5 stuff",
+            description: "Other UE5 project I have made.",
+            image: "/assets/image.png", 
+            link: "/assets/image.png" 
           },
           {
             title: "AI Dungeon Master",
