--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </div>
                 </div>
                 <div className="relative">
-                  <img src="https://picsum.photos/id/237/800/600"  alt="Game development concept" className="rounded-2xl shadow-2xl object-cover w-full h-auto max-h-[500px]" />
+                  <img src="/assets/1000002015.jpg"  alt="Game development concept" className="rounded-2xl shadow-2xl object-cover w-full h-auto max-h-[500px]" />
                   <div className="absolute -bottom-4 -right-4 w-24 h-24 bg-purple-600 rounded-full blur-xl opacity-70"></div>
                 </div>
               </div>
@@ -137,18 +137,6 @@
             description: "Other UE5 project I have made.",
             image: "/assets/image.png", 
             link: "/assets/image.png" 
-          },
-          {
-            title: "AI Dungeon Master",
-            description: "Machine learning-powered RPG engine that creates dynamic narratives based on player behavior.",
-            image: "https://picsum.photos/id/1015/800/600", 
-            link: "https://ai-dungeon-master.demo" 
-          },
-          {
-            title: "Smart Home Controller",
-            description: "IoT device with touch screen interface for managing home automation systems using ESP32 microcontroller.",
-            image: "https://picsum.photos/id/1016/800/600", 
-            link: "https://github.com/martynezys/smart-home-controller" 
           }
         ].map((project, index) => (
           <a 
