--- a/index.html
+++ b/index.html
@@ -242,9 +242,7 @@
                   <span className="text-lg font-bold">Martynezys</span>
                 </div>
                 <div className="flex space-x-6">
-                  <a href="#" className="text-gray-400 hover:text-white transition-colors">GitHub</a>
-                  <a href="#" className="text-gray-400 hover:text-white transition-colors">LinkedIn</a>
-                  <a href="#" className="text-gray-400 hover:text-white transition-colors">Twitter</a>
+                  <a href="https://github.com/Martynezys" className="text-gray-400 hover:text-white transition-colors">GitHub</a>
                 </div>
               </div>
               <div className="mt-8 pt-8 border-t border-gray-800 text-center text-gray-500 text-sm">
