--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           {
             title: "Projekt VTT",
             description: "A physics-based puzzle game that teaches quantum computing principles through gameplay mechanics.",
-            image: "https://picsum.photos/id/1011/800/600", 
+            image: "/assets/image1.png", 
             link: "https://vimeo.com/1094175370/945b8af061" 
           },
           {
