--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         {[
           {
             title: "Projekt VTT",
-            description: "A physics-based puzzle game that teaches quantum computing principles through gameplay mechanics.",
+            description: "First person survival shooter made in unreal engine 5.4.1",
             image: "/assets/image1.png", 
             link: "https://vimeo.com/1094175370/945b8af061" 
           },
