--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         sk: {
           nav: { home: 'Domov', portfolio: 'Portfólio', contact: 'Kontakt' },
           hero: {
-            title: 'Vytváram imerzívne zážitky v hernom vývoji a elektronike',
+            title: 'Vytváram kreatívne zážitky v hernom vývoji a elektronike',
             description: 'Som vášnivý vývojár a nadšenec do elektroniky, ktorý mení nápady na interaktívnu realitu.'
           },
           buttons: { viewWork: 'Zobraziť moje práce', contactMe: 'Kontaktuj ma' },
